--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -60,7 +60,7 @@
 }
 
 h2 {
-  font-size: $size-default;
+  font-size: $size-small;
   line-height: 1.2;
   color: $color-darker;
   font-weight: $font-weight-default;
