--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -62,7 +62,7 @@
 h2 {
   font-size: $size-small;
   line-height: 1.2;
-  color: rgba(255, 255, 255, 1);
+  color: $color-darker;
   font-weight: $font-weight-bold;
   display: inline-block;
 }
