--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -1,4 +1,6 @@
-$font-family-default: 'Chivo', "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", Helvetica, sans-serif !default;
+$font-sans: "IBM Plex Sans", "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", Helvetica, sans-serif !default;
+$font-mono: "IBM Plex Mono", monospace !default;
+$font-serif: "IBM Plex Serif", "Georgia", serif !default;
 $font-weight-default: 400 !default;
 $font-weight-bold: 700 !default;
 $base-line-height: 1.7 !default;
@@ -12,6 +14,12 @@ $color-accent:    #569CE1 !default;
 $color-important:	#D58882 !default;
 $color-mute:      #919AA1 !default;
 $color-invert:		#ffffff !default;
+
+$color-green:			#39C88A !default;
+$color-blue:			#00A5D5 !default;
+$color-violet:		#8665C7 !default;
+$color-red:				#C8005F !default;
+$color-yellow:		#FEAE00 !default;
 
 $color-bg-dark:		#2b2f32 !default;
 $color-bg-mute:		#f1f1f1 !default;
