--- a/assets/style/fonts.scss
+++ b/assets/style/fonts.scss
@@ -117,3 +117,63 @@
     url('~/assets/fonts/IBMPlexSerif-Italic.woff2') format('woff2'),
     url('~/assets/fonts/IBMPlexSerif-Italic.woff') format('woff');
 }
+
+@font-face {
+  font-family: 'facet';
+  src: url('~/assets/fonts/facet.eot?57420886');
+  src: url('~/assets/fonts/facet.eot?57420886#iefix') format('embedded-opentype'),
+       url('~/assets/fonts/facet.woff2?57420886') format('woff2'),
+       url('~/assets/fonts/facet.woff?57420886') format('woff'),
+       url('~/assets/fonts/facet.ttf?57420886') format('truetype'),
+       url('~/assets/fonts/facet.svg?57420886#facet') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'facet';
+    src: url('../font/facet.svg?57420886#facet') format('svg');
+  }
+}
+*/
+
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "facet";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-popup:before { content: '\e801'; } /* '' */
+.icon-filter:before { content: '\f0b0'; } /* '' */
