--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -63,7 +63,7 @@ h2 {
   font-size: $size-big;
   line-height: 1.2em;
   margin-bottom: $spacing / 2;
-  color: $color-darker;
+  color: palette(grey, 20);
   font-weight: $font-weight-bold;
   display: inline-block;
 
@@ -77,7 +77,7 @@ h3 {
   font-weight: $font-weight-default;
   line-height: 1.2;
   display: inline-block;
-  color: rgba(255, 255, 255, 1);
+  color: palette(grey, 20);
   letter-spacing: $spacing-default;
   line-height: 1em;
 
