--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -7,6 +7,54 @@ $base-line-height: 1.7 !default;
 
 $spacing:     2rem !default;
 
+$palettes: (
+  primary: (
+    lightest: #03A6DC,
+    lighter:  #1797c6,
+    light:    #1f89b0,
+    base:     hsl(196, 63%, 37%),
+    dark:     #1e6480,
+    darker:   #0d4357,
+    darkest:  #012632
+  ),
+  secondary: (
+  	lightest: #03A6DC,
+    lighter:  #1797c6,
+    light:    #1f89b0,
+    base:     #eb9700,
+    dark:     #1e6480,
+    darker:   #0d4357,
+    darkest:  #012632
+  ),
+  accent: (
+    lightest: hsl(354, 63%, 80%),
+    lighter:  hsl(358, 49%, 66%),
+    light:    hsl(359, 40%, 53%),
+    base:     hsl(355, 62%, 37%),
+    dark:     hsl(355, 60%, 28%),
+    darker:   hsl(355, 58%, 19%),
+    darkest:  hsl(356, 61%, 10%)
+  ),
+  grey: (
+    100: hsl(240, 5%, 100%),
+    90:  hsl(240, 5%, 97%),
+    85:  hsl(240, 5%, 92%),
+    80:  hsl(240, 5%, 88%),
+    70:  hsl(240, 5%, 74%),
+    60:  hsl(240, 5%, 65%),
+    50:  hsl(240, 5%, 56%),
+    40:  hsl(240, 5%, 47%),
+    30:  hsl(240, 5%, 39%),
+    20:  hsl(240, 5%, 30%),
+    10:  hsl(240, 5%, 22%),
+    0:   hsl(240, 5%, 13%)
+  )
+);
+
+@function palette($palette, $tone: '50') {
+  @return map-get(map-get($palettes, $palette), $tone);
+}
+
 $color-default:   #222222 !default;
 $color-darker:		#626C76 !default;
 $color-dark:			#D0CFCE !default;
