--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -74,7 +74,7 @@ h2 {
 
 h3 {
   font-size: $size-small;
-  font-weight: $font-weight-default;
+  font-weight: $font-weight-bold;
   line-height: 1.2;
   display: inline-block;
   color: palette(grey, 20);
