--- a/assets/style/tooltip.scss
+++ b/assets/style/tooltip.scss
@@ -20,6 +20,10 @@
     z-index: 1;
   }
 
+  & {
+    pointer-events: none;
+  }
+
   &[x-placement^="top"] {
     margin-bottom: 8px; // Greater distance. Default: 6px
 
