--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -206,6 +206,7 @@ table {
   letter-spacing: $spacing-wide;
   font-size: $size-small;
   outline: none;
+  line-height: 1.3;
 
   &.clickable {
     cursor: pointer;
