--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -206,6 +206,7 @@ table {
   font-size: $size-small;
   outline: none;
   line-height: 1.3;
+  white-space: nowrap;
 
   padding: $spacing / 4 $spacing / 3;
 
