New icon for list

--- a/assets/style/fonts.scss
+++ b/assets/style/fonts.scss
@@ -182,3 +182,4 @@
 .icon-info-circled:before { content: '\e804'; } /* '' */
 .icon-popup:before { content: '\e805'; } /* '' */
 .icon-filter:before { content: '\f0b0'; } /* '' */
+.icon-list:before { content: '\e806'; } /* '' */
