--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -97,6 +97,11 @@ $on-desktop:       1224px !default;
 
 $column-width:		220px !default;
 
+$narrow: 600px !default;
+$medium: 900px !default;
+$wide: 1200px !default;
+$extra-wide: 1700px !default;
+
 @mixin media-query($device) {
   @media screen and (min-width: $device) {
     @content;
