--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -96,6 +96,7 @@ $on-laptop:        768px !default;
 $on-desktop:       1224px !default;
 
 $column-width:		220px !default;
+$column-gap:      $spacing !default;
 
 $narrow: 600px !default;
 $medium: 900px !default;
