--- a/assets/style/base.scss
+++ b/assets/style/base.scss
@@ -1,4 +1,8 @@
 @charset "utf-8";
+$font-prefix: "../../node_modules/library/src/assets/fonts";
+@import "library/src/style/base.scss";
+@import 'vue-draggable-resizable/dist/VueDraggableResizable.css';
+
 @import "./variables";
 
 @mixin media-query($device) {
