--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -58,7 +58,7 @@ $palettes: (
 $color-default:   #222222 !default;
 $color-darker:		#626C76 !default;
 $color-dark:			#D0CFCE !default;
-$color-accent:    #569CE1 !default;
+$color-accent:    $color-neon !default;
 $color-important:	#D58882 !default;
 $color-mute:      #919AA1 !default;
 $color-invert:		#ffffff !default;
