--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -258,7 +258,7 @@ table {
   }
 
   &.btn--light {
-    transition-duration: 0.5s;
+    transition: color $transition, border-color $transition;
     color: palette(grey, 60);
     border-radius: 4px;
     text-align: center;
@@ -270,8 +270,12 @@ table {
     outline: none;
     line-height: 1.3;
     white-space: nowrap;
-
     padding: $spacing / 4 $spacing / 3;
+
+    &:hover, &:focus {
+      color: $color-accent;
+      border-color: $color-accent;
+    }
   }
 
   &:disabled, &[disabled] {
