--- a/assets/style/layout.scss
+++ b/assets/style/layout.scss
@@ -70,7 +70,7 @@ body {
   }
 }
 
-@include media-query($on-desktop) {
+@include media-query($wide) {
   .columns, .topics .columns {
     flex-direction: row;
   }
