--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -24,5 +24,5 @@ $spacing-wide:		0.02em !default;
 $spacing-wider:		0.05em !default;
 $spacing-widest:	0.10em !default;
 
-$column-width:		220px !default;
-$column-gap:      $spacing !default;
+$facet-width:		220px !default;
+$facet-gap:      $spacing !default;
