--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -221,6 +221,27 @@ table {
     }
   }
 
+  &.btn--compact {
+    transition: color $transition, border-color $transition;
+    color: $color-light-gray;
+    border-radius: 2px;
+    text-align: center;
+    display: inline-block;
+    border: 1px solid $color-pale-gray;
+    background-color: transparent;
+    letter-spacing: $spacing-wide;
+    font-size: $size-smallest;
+    outline: none;
+    line-height: 1.3;
+    white-space: nowrap;
+    padding: $spacing / 8 $spacing / 8;
+
+    &:hover, &:focus {
+      color: $color-interactive;
+      border-color: $color-interactive;
+    }
+  }
+
   &:disabled, &[disabled] {
     cursor: default;
     pointer-events: none;
